<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/gambar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_image" />

        <TextView
            android:id="@+id/textJudul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
